# Afri-proverb

./: .gitignore  pyproject.toml  run.sh  run_gemma.sh  run_gemma_few_shots.sh  run_mistral.sh  run_qwen.sh  run_together.sh
configs/: default.yaml
src/proverb/commands/: evaluate.py  train.py
src/proverb/data/: chat_template.py  collators.py  constants.py  dataset.py  loader.py  processor.py  prompts.py
src/proverb/engine/: args.py  cloud_eval.py  metrics.py  trainer.py
src/proverb/extras/: logging.py  misc.py
src/proverb/model/: loader.py  together_client.py
tests/: test.py  test_dataset.py  test_model.py  test_mt.py  test_template.py
