[project]
name = "afri-proverb"
version = "0.1.0"
description = "African proverb modeling and evaluation"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.12.0",
    "datasets==4.6.0",
    "evaluate",
    "huggingface-hub==1.5.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pyyaml==6.0.3",
    "sacrebleu",
    "together",
    "torch==2.10.0",
    "transformers==5.2.0",
    "trl==0.29.0",
    "typing-extensions==4.15.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
]

[tool.uv]
package = false
